methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:2: error: not found: type int
def move (nbPas: int, versLAvant: Boolean)
                 ^